# Sim2Real-Generative-AI-using-GAN-and-custom-dataset

./: .gitignore  .pre-commit-config.yaml  batch_size_impact.py  inference.py  pyproject.toml  readme.md  train.py
config/: __init__.py  base_models.py  train.yml
requirements/: default.txt  dev.txt  generate_requirements.py
src/: __init__.py
src/data/: __init__.py  dataset.py  equirec2perspective.py  inference_dataset.py  utils.py
src/data/acquisition/: array_compresser.py  blender.py  mapillary.py  utils.py
src/data/transformation/: __init__.py  batcher.py  concat.py  equirec2perspective.py  flip.py  normalize.py  perspective.py  perspective_transform.py  remap.py  resize.py  resize_transform.py  to.py  todevice.py
src/data/visualisation/: __init__.py  utils.py  visualisation.py
src/eval/: gan_loss.py
src/logger/: __init__.py  checkpointer.py  metrics_logger.py
src/models/: __init__.py  cycle_gan.py  discriminator_patchgan.py  gan.py  generator_spade.py  generator_unet.py
src/models/blocks/: shortcut_connection.py
