[project]
name = "faceliftGAN"
# PEP 440 - Version Identification and Dependency Specification https://peps.python.org/pep-0440/
version = "0.0.1"
description = "GAN to texturize simulated images"
# readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]

dependencies = [
    "pyproj",
    "numpy",
    "cv2",
    "torch"
]

[project.urls]
repository = "https://github.com/MarcBresson/Individual-Research-Project"

[tool.setuptools.packages]
find = {}
