[project]
name = "faceliftGAN"
# PEP 440 - Version Identification and Dependency Specification https://peps.python.org/pep-0440/
version = "0.0.1"
description = "GAN to texturize simulated images"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]

dependencies = [
    "pyproj",
    "tqdm",
    "pyyaml",
    "pandas",
    "pyarrow",
    "matplotlib",
    "numpy",
    "opencv-python",
    "torch",
    "pytorch-ignite"
]

[project.urls]
repository = "https://github.com/MarcBresson/Individual-Research-Project"

[tool.setuptools.packages]
find = {}
